# cfg-argparser

./: .gitignore  LICENSE  README.md  pyproject.toml  test.json
github/: example.py  typer_example.py
src/cfg_argparser/: __init__.py  argparse_config.py  cfg_dict.py  config_arg_parser.py  function_config_wrapper.py
src/cfg_param_wrapper/: cfg_dict.py  function_config_wrapper.py  save_handlers.py
tests/: wrapper_test.py
